fix(avatar): correct text vertical alignment

--- a/components/src/avatar/avatar.component.scss
+++ b/components/src/avatar/avatar.component.scss
@@ -9,7 +9,7 @@
   }
 }
 .avatar-name {
-  display: inline-block;
+  display: flex;
   border-radius: 50%;
   background: #616161;
   color: #fff;
